# message_db

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish-crate.yml
migrations/: V10__function_cardinal_id.sql  V11__function_stream_version.sql  V12__function_write_message.sql  V13__function_get_stream_messages.sql  V14__function_get_category_messages.sql  V15__function_get_last_stream_message.sql  V16__index_messages_id.sql  V17__index_messages_stream.sql  V18__index_messages_category.sql  V19__view_stream_summary.sql  V20__view_type_summary.sql  V21__view_stream_type_summary.sql  V22__view_type_stream_summary.sql  V23__view_category-type-summary.sql  V24__view_type_category_summary.sql  V2__table_messages.sql  V3__type_message.sql  V4__function_message_store_version.sql  V5__function_hash_64.sql  V6__function_acquire_lock.sql  V7__function_category.sql  V8__function_is_category.sql  V9__function_id.sql
src/: command.rs  config.rs  db.rs  entity.rs  error.rs  event.rs  lib.rs  message.rs  message_db.rs  reader.rs  subscriber.rs  subscription.rs  writer.rs
tests/: message_db.rs  reader.rs  test_setup.rs  utils.rs
