[package]
name = "message_db"
version = "0.0.3"
authors = ["aldofunes"]
edition = "2018"
description = "Event-Sourced autonomous services for rust"
license = "MIT"
repository = "https://github.com/aldofunes/message_db/"

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["full"] }
tokio-postgres = { version = "0.7.1", features = [
  "with-uuid-0_8",
  "with-chrono-0_4",
  "with-serde_json-1",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
async-trait = "0.1.48"
rand = "0.8.3"
test-context = "0.1.3"
